[package]
name = "leafedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.27.0"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
ron = "0.7"
chrono = "0.4.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

